<resources>
    <string name="app_name">ProyectoTarea</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- STRING DE LOS MENU ACTIVITY -->
    <string name="title_activity_actividad_menu">ActividadMenuActivity</string>
    <string name="title_activity_ciclo_menu">CicloMenuActivity</string>
    <string name="title_activity_horario_no_menu">HorarioNoMenuActivity</string>
    <string name="title_activity_tipo_amenu">TipoAMenuActivity</string>
    <string name="title_activity_docente_menu">DocenteMenuActivity</string>
    <string name="title_activity_carga_docente_menu">CargaDocenteMenuActivity</string>
    <string name="title_activity_cargo_menu">CargoMenuActivity</string>
    <string name="title_activity_solicitud_menu">SolicitudMenuActivity</string>

    <!-- STRING DE LAS GESTIONES DE ACTIVIDAD -->
    <string name="title_activity_actividad_insertar">ActividadInsertarActivity</string>
    <string name="title_activity_actividad_eliminar">ActividadEliminarActivity</string>
    <string name="title_activity_actividad_actualizar">ActividadActualizarActivity</string>
    <string name="title_activity_actividad_consultar">ActividadConsultarActivity</string>

    <!-- STRING DE LAS GESTIONES DE CICLO -->
    <string name="title_activity_ciclo_insertar">CicloInsertarActivity</string>
    <string name="title_activity_ciclo_eliminar">CicloEliminarActivity</string>
    <string name="title_activity_ciclo_actualizar">CicloActualizarActivity</string>
    <string name="title_activity_ciclo_consultar">CicloConsultarActivity</string>

    <!--STRING DE LAS GESTIONES DE HORARIO NO HÁBIL-->

    <string name="title_activity_horario_no_insertar">HorarioNoInsertarActivity</string>
    <string name="title_activity_horario_no_eliminar">HorarioNoEliminarActivity</string>
    <string name="title_activity_horario_no_actualizar">HorarioNoActualizarActivity</string>
    <string name="title_activity_horario_no_consultar">HorarioNoConsultarActivity</string>

    <!-- STRING DE GESTIONES DE TIPO DE ACTIVIDAD-->

    <string name="title_activity_tipo_ainsertar">TipoAInsertarActivity</string>
    <string name="title_activity_tipo_aeliminar">TipoAEliminarActivity</string>
    <string name="title_activity_tipo_aactualizar">TipoAActualizarActivity</string>
    <string name="title_activity_tipo_aconsultar">TipoAConsultarActivity</string>

    <!-- STRING DE GESTIONES DE DOCENTE-->

    <string name="activity_docente_insertar">DocenteInsertarActivity</string>
    <string name="activity_docente_eliminar">DocenteEliminarActivity</string>
    <string name="activity_docente_actualizar">DocenteActualizarActivity</string>
    <string name="activity_docente_consultar">DocenteConsultarActivity</string>

    <!-- STRING DE GESTIONES DE  CARGA DOCENTE-->
    <string name="activity_carga_docente_insertar">CargaDocenteInsertarActivity</string>
    <string name="activity_carga_docente_eliminar">CargaDocenteEliminarActivity</string>
    <string name="activity_carga_docente_actualizar">CargaDocenteActualizarActivity</string>
    <string name="activity_carga_docente_consultar">CargaDocenteConsultarActivity</string>

    <!-- STRING DE GESTIONES DE CARGO-->
    <string name="activity_cargo_insertar">CargoInsertarActivity</string>


    <!-- STRING DE GESTIONES DE SOLICITUD-->
    <string name="activity_solicitud_insertar">SolicitudInsertarActivity</string>
    <string name="activity_solicitud_eliminar">SolicitudEliminarActivity</string>
    <string name="activity_solicitud_actualizar">SolicictudActualizarActivity</string>
    <string name="activity_solicitud_consultar">SolicitudConsultarActivity</string>


    <!-- String Carrera, Escuela, Asignatura, Pensum -->
    <string name="title_activity_carrera_menu">CarreraMenuActivity</string>
    <string name="title_activity_pensum_menu">PensumMenuActivity</string>
    <string name="title_activity_escuela_menu">EscuelaMenuActivity</string>
    <string name="title_activity_carrera_insertar">CarreraInsertarActivity</string>
    <string name="title_activity_carrera_eliminar">CarreraEliminarActivity</string>
    <string name="title_activity_carrera_actualizar">CarreraActualizarActivity</string>
    <string name="title_activity_carerra_consultar">CarrerraConsultarActivity</string>
    <string name="title_activity_pensum_insertar">PensumInsertarActivity</string>
    <string name="title_activity_pensum_eliminar">PensumEliminarActivity</string>
    <string name="title_activity_pensum_actualizar">PensumActualizarActivity</string>
    <string name="title_activity_pensum_consultar">PensumConsultarActivity</string>
    <string name="title_activity_escuela_insertar">EscuelaInsertarActivity</string>
    <string name="title_activity_escuela_eliminar">EscuelaEliminarActivity</string>
    <string name="title_activity_escuela_actualizar">EscuelaActualizarActivity</string>
    <string name="title_activity_escuela_consultar">EscuelaConsultarActivity</string>
    <string name="title_activity_asignatura_insertar">AsignaturaInsertarActivity</string>
    <string name="title_activity_asignatura_consultar">AsignaturaConsultarActivity</string>

    <string name="carrera_menu">Función a Ejecutar Carrera</string>
    <string name="pensum_menu">Función a Ejecutar Pensum</string>
    <string name="escuela_menu">Función a Ejecutar Escuela</string>


    <string name="id_carrera">idCarrera</string>
    <string name="nombre_carrera">nombreCarrera</string>
    <string name="id_pensum">idPensum</string>
    <string name="nombre_materia">NombreMateria</string>
    <string name="id_escuela">idEscuela</string>
    <string name="nombre_escuela">nombreEscuela</string>
    <string name="id_asignatura">idAsignatura</string>
    <string name="nombre_asignatura">nombreAsignatura</string>
    <string name="Insertar">Insertar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Consultar">Consultar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Opciones">Opciones:</string>

    <!-- Fin String Carrera, Escuela, Asignatura, Pensum -->


    <!-- String de las funciones para los menu -->

    <string name="actividad_menu">Función a Ejecutar Actividad</string>
    <string name="ciclo_menu">Función a Ejecutar Ciclo</string>
    <string name="horario_no_menu">Función a Ejecutar HorarioNo</string>
    <string name="tipo_amenu">Función a Ejecutar Tipo</string>
    <string name="docente_menu">Funcion a Ejecutar Docente</string>
    <!-- STRING DE LAS FUNCIONALIDADES EN LOS MENUS -->


    <!-- STRING DE LA INFORMACION  A INGRESAR -->

    <string name="ciclo">Ciclo</string>
    <string name="detalle">Detalle</string>
    <string name="actividad">Actividad</string>
    <string name="fecha">Fecha</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>

    <!-- STRING DE LA INFORMACION  A INGRESAR DOCENTE -->

    <string name="id_docente">Codigo Docente: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="dui">Dui: </string>
    <string name="genero">Genero: </string>
    <string name="email">Email: </string>

    <!-- STRING DE LA INFORMACION  A INGRESAR CARGA DOCENTE -->
    <string name="id_carga_docente">Codigo Carga Docente: </string>
    <string name="nombre_carga">Carga: </string>
    <string name="id_asig_pesum">Codigo Asignatura: </string>
    <string name="id_ciclo">Codigo Ciclo: </string>
    <string name="id_solici">Codigo Solicitud: </string>
    <string name="id_docent">Codigo Docente: </string>
    <string name="id_dispo_ciclo">Codigo Disponibilidad: </string>

    <!-- STRING DE LA INFORMACION  A INGRESAR SOLICITUD -->
    <string name="id_solicitud">Codigo Solicitud: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="capacidad1">Capacidad: </string>
    <string name="fecha_soli">Fecha: </string>

    <!-- STRING DE LA INFORMACION  A INGRESAR CARGO -->
    <string name="id_cargo">Codigo Cargo: </string>
    <string name="tipo_docente">Cargo: </string>
    <string name="descripcion_cargo">Descripcion: </string>
    <string name="idLocal">Id Locales</string>  <!--String Locales-->
    <string name="ubicacion">Ubicacion</string>
    <string name="capacidad">Capacidad</string>
    <string name="nombre1">Nombre</string>


</resources>
