<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_docente"/>
        <EditText
            android:id="@+id/editidDocente"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/apellido" />
        <EditText
            android:id="@+id/editApellido"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/dui" />
        <EditText
            android:id="@+id/editDui"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/genero" />
        <EditText
            android:id="@+id/editGenero"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/email" />
        <EditText
            android:id="@+id/editEmail"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertar"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>