<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idLocal" />
        <EditText
            android:id="@+id/editIdLocal"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ubicacion" />
        <EditText
            android:id="@+id/editUbicacion"
            android:inputType="text"
            android:maxLength="80" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/capacidad" />
        <EditText
            android:id="@+id/editCapacidad"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarLocal"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>