<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/id_escuela"/>
        <EditText
            android:id="@+id/editId_Escuela"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombre_escuela" />
        <EditText
            android:id="@+id/editNombre_Escuela"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/Opciones" />
        <TableRow>

        </TableRow>
        <Button
            android:onClick="insertarEscuela"
            android:text="@string/Insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/Limpiar" />
    </TableRow>
</TableLayout>